fix: scrollbars on projects

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -263,9 +263,11 @@ body {
   gap: 32px;
   position: relative;
   overflow-y: scroll;
+  overflow-x: hidden;
+  scrollbar-width: none;
 
   &::-webkit-scrollbar {
-    width: 0px;
+    display: none;
   }
 
   &::after {
